@@ -1,3 +1,7 @@
+-------------------------- soilDB 1.2-6 (2013-12-05) ----------------------------
+* added new function contributed by J.M. Skovlin: get_veg_from_NPS_PLOTS_db()
+* bugfixes in get_extended_data_from_NASIS_db(): results from geomorph tables are now returned
+
 -------------------------- soilDB 1.2-3 (2013-10-25) ----------------------------
 * added new function fetchSCAN() for downloading soil/climate data from USDA-NRCS SCAN stations (still experimental!)
 
